# Back_End_Project

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
libs/thread_pool/: CMakeLists.txt  README.md
libs/thread_pool/bench/: bench_thread_pool.cpp
libs/thread_pool/examples/: thread_pool_example.cpp
libs/thread_pool/include/: ThreadPool.hpp
libs/thread_pool/src/: ThreadPool.cpp
libs/thread_pool/tests/: test_thread_pool.cpp
projects/http_server/: CMakeLists.txt
projects/http_server/include/: HttpRequest.hpp  HttpResponse.hpp
projects/http_server/src/: HttpRequest.cpp  HttpResponse.cpp  main.cpp
projects/http_server/static/: index.html
